Nuevo cambio echo en VSC

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-<p>Hola amigos este es mi sitio web, siganme en facebook como: Edgar Lopez</p>
+<p>Hola amigos Ya estare editando y compartiendo el codigo en Github</p>
 
 </body>
 </html>
